# GenSON

./: .gitignore  .travis.yml  AUTHORS.rst  HISTORY.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python-publish.yml
extras/: printschema.py
genson/: __init__.py  cli.py  generator.py  genson.py
genson/schema/: builder.py  node.py  root.py
genson/schema/generators/: __init__.py  array.py  base.py  basic.py  list.py  notype.py  number.py  object.py  scalar.py  tuple.py
genson/schema/strategies/: __init__.py  array.py  base.py  enum.py  object.py  scalar.py
genson/schema_types/: __init__.py  basic.py  list.py  number.py  object.py  tuple.py
genson/types/: list.py  tuple.py
jschemagen/: __init__.py  generator.py
schemagen/: __init__.py  generator.py
test/: base.py  sort.py  test_add_multi.py  test_add_single.py  test_bin.py  test_builder.py  test_custom.py  test_gen_multi.py  test_gen_single.py  test_gen_single_val.py  test_generator.py  test_misuse.py  test_root.py  test_seed_schema.py  test_warnings.py
