[metadata]
name = genson
author = Jon Wolverton
author_email = replace_1337_5pe4k_with_its_equivalents_and_remove_this_message_w0lv3rt0n.jr@gm41l.com
license = MIT
description = GenSON is a powerful, user-friendly JSON Schema generator.
long_description = file: README.rst, HISTORY.rst, AUTHORS.rst
keywords =
    json, schema, json-schema, jsonschema, object, generate
    generator, builder, merge, draft 7, validate, validation
url = https://github.com/wolverdude/genson/
download_url = https://github.com/wolverdude/GenSON/tarball/v0.2s.0
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
packages = genson
zip_safe = True
include_package_data = True

[options.entry_points]
console_scripts = genson = genson.__main__:main

[bdist_wheel]
universal = 1

[global]
verbose = False
